--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -7,7 +7,7 @@ http {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     server_name localhost;
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/public;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -17,6 +17,10 @@ http {
     location ~ \.php$ {
       include fastcgi_params;
       fastcgi_pass php:9000;
+      fastcgi_index index.php;
+      fastcgi_param REQUEST_METHOD $request_method;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
     }
   }
 }
