--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -16,9 +16,9 @@
 .env
 .env-prod
 .env-local
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
