--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -2,11 +2,24 @@ events {}
 
 http {
   server {
-    listen 80;
+    listen 80 default_server;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    server_name _;
+    return 301 https://$host$request_uri;
+
+  }
+
+  server {
+    listen 443 ssl;
+    # use the certificates
+    ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
+    
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    server_name localhost;
+    server_name http://laravelshowcase.crabdance.com/;
     root /usr/share/nginx/html/public;
 
     location / {
@@ -21,6 +34,10 @@ http {
       fastcgi_param REQUEST_METHOD $request_method;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
+    }
+
+    location ~ /.well-known/acme-challenge/ {
+      root /var/www/certbot;
     }
   }
 }
