added acme challenge location block

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -14,6 +14,10 @@ http {
         gzip_static on;
     }
 
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location ~ \.php$ {
       include fastcgi_params;
       fastcgi_pass php:9000;
