--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -2,11 +2,19 @@ events {}
 
 http {
   server {
-    listen 80;
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+  }
+  
+  server {
+    listen 443 ssl http2;
+    ssl_certificate     /etc/letsencrypt/live/laravelshowcase.crabdance.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/laravelshowcase.crabdance.com/privkey.pem;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    server_name localhost;
+    server_name laravelshowcase.crabdance.com;
     
 
     location / {
@@ -27,5 +35,10 @@ http {
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
     }
+
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
   }
 }
