--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -3,12 +3,13 @@ events {}
 http {
   server {
     listen 80 default_server;
-    server_name _;
+    server_name laravelshowcase.crabdance.com;
     return 301 https://$host$request_uri;
   }
   
   server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     ssl_certificate     /etc/letsencrypt/live/laravelshowcase.crabdance.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/laravelshowcase.crabdance.com/privkey.pem;
     index index.php index.html;
