--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,5 +27,6 @@ CMD php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php composer-setup.php \
     && php -r "unlink('composer-setup.php');" \
     && mv composer.phar /usr/local/bin/composer \
-    && composer -v \
+    && composer install \
+    && composer -v
     && php-fpm
