added basic styling to home, login, signup, and navbar

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,5 +28,5 @@ CMD php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php -r "unlink('composer-setup.php');" \
     && mv composer.phar /usr/local/bin/composer \
     && composer install \
-    && composer -v
+    && composer -v \
     && php-fpm
