--- a/backend/docker-compose-local.yml
+++ b/backend/docker-compose-local.yml
@@ -8,7 +8,7 @@ services:
       - "80:80" 
     volumes:
       - type: bind
-        source: ./nginx.conf
+        source: ./nginx-local.conf
         target: /etc/nginx/nginx.conf
     depends_on:
       - php
